--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -20,7 +20,7 @@ jobs:
             - name: checkout the repo
               uses: actions/checkout@v4
             - name: login to ghcr.io
-              run: docker login -u ${{ github.actor }} --password-stdin ${{ secrets.TOKEN }}
+              run: echo "${{ secrets.TOKEN }}" | docker login -u ${{ github.actor }} --password-stdin ${{ env.GITHUB_REGISTRY }}
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
             - name: build and push docker image using buildx
