[ELNA-161]: Dockerimage tag name update
Description:
  This commit have the workflow changes for setting the docker image tag
  to the latest version release.

Note:
  NONE

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -31,7 +31,7 @@ jobs:
                 docker buildx inspect
                 docker buildx build \
                 --platform linux/amd64 \
-                -t ${{ env.GITHUB_REGISTRY }}/${{ github.repository_owner }}/elna-platform-infrastructure:${{ github.sha }} \
+                -t ${{ env.GITHUB_REGISTRY }}/${{ github.repository_owner }}/elna-platform-infrastructure:${{ github.ref }} \
                 -f Dockerfile \
                 --push .
             - name: Release
